stockage dans la base de donnée réussi et récuperation des entités acquis

--- a/src/LoveLetter/PlatformBundle/Resources/views/Jeu/plateauDeJeu.html.twig
+++ b/src/LoveLetter/PlatformBundle/Resources/views/Jeu/plateauDeJeu.html.twig
@@ -6,6 +6,8 @@
 
   <ul>
     {{id}}
+    <center> <img src={{url}} alt="" width="211" height="300"/>
+    <img src={{url2}} alt="" width="211" height="300"/></center> 
   </ul>
 
 {% endblock %}
